chap05/5.2/web-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
  # annotations:
  #   external-dns.alpha.kubernetes.io/hostname: nginx.k8s.local
spec:
  selector:
    app: nginx-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
